webui-oauth2-proxy-sidecar.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: open-webui
  labels:
    app: open-webui
    version: v1
spec:
  selector:
    matchLabels:
      app: open-webui
      version: v1
  replicas: 1
  template:
    metadata:
      annotations:
        proxy.istio.io/config: |
          holdApplicationUntilProxyStarts: true
      labels:
        app: open-webui
        version: v1
    spec:
      containers:
        - name: open-webui
          image: 'ghcr.io/open-webui/open-webui:0.3.11'
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          tty: true
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: 500m
              memory: 500Mi
          livenessProbe:
            initialDelaySeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            httpGet:
              port: http
              path: /health
              scheme: HTTP
          readinessProbe:
            initialDelaySeconds: 30
            failureThreshold: 3
            timeoutSeconds: 5
            periodSeconds: 30
            successThreshold: 1
            httpGet:
              port: http
              path: /health
              scheme: HTTP
        - name: oauth2-proxy
          image: 'docker.io/oauth2-proxy:v7.6.0'
          resources:
            limits:
              cpu: "1000m"
              memory: "1Gi"
            requests:
              cpu: 500m
              memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
    - port: 8080
      targetPort: 4180 # oauth2-proxy port
      name: http
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: open-webui
  namespace: open-webui
spec:
  ingressClassName: nginx
  rules:
    - host: webui.xxxx.com
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: open-webui
                port:
                  name: http
